build: remove dependency on commons-imaging library for monochrome to RGB conversions.